--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🧶Ensueño Click</title>
+  <title>Ensueño Click</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
@@ -15,56 +15,59 @@
         <li><a href="#" data-section="inicio">Inicio</a></li>
         <li><a href="#" data-section="catalogo">Catálogo</a></li>
         <li><a href="#" data-section="nosotros">Sobre Nosotros</a></li>
+        <li><a href="#" data-section="carrito">Carrito 🛒 (<span id="cart-count">0</span>)</a></li>
       </ul>
     </nav>
-    <div class="cart">🛒</div>
   </header>
 
-  <!-- Contenedor dinámico -->
+  <!-- Contenido dinámico -->
   <main id="contenido">
-    <!-- Inicio cargado por defecto -->
+    <!-- Inicio -->
     <section id="inicio" class="seccion">
       <h1>Bienvenido a Ensueño Click</h1>
-      <p>Amigurumis únicos hechos a mano. ¡Explora nuestro catálogo o solicita uno personalizado!</p>
+      <p>Amigurumis únicos hechos a mano con mucho amor. ¡Explora nuestro catálogo o solicita uno personalizado!</p>
       <a href="#" class="btn" data-section="catalogo">Ver catálogo</a>
     </section>
 
+    <!-- Catálogo -->
     <section id="catalogo" class="seccion oculto">
       <h2>Catálogo de Amigurumis</h2>
       <div class="grid">
         <div class="producto">
-          <img src="https://th.bing.com/th/id/OIP.DlrbWEGvQqxB-As3CQ01NAHaKf?w=129&h=183&c=7&r=0&o=7&pid=1.7&rm=3" alt="Amigurumi Oso" />
-          <h3>Oso de crochet</h3>
-          <p>$35.000</p>
+          <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\7d1d9e84-e7f0-4edc-943e-17c482e2a377.jpg" alt="Amigurumi Oso" />
+          <h3>Pesebre para navidad</h3>
+          <p>$35000</p>
+          <button class="add-to-cart" data-id="1" data-nombre="Oso de crochet" data-precio="35000">Agregar</button>
         </div>
         <div class="producto">
-          <img src="https://th.bing.com/th/id/OIP.sqZnnN04h1dRKaWOb6j0jAHaJ3?w=203&h=271&c=7&r=0&o=7&pid=1.7&rm=3" alt="Amigurumi Unicornio" />
-          <h3>Unicornio mágico</h3>
-          <p>$40.000</p>
+          <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\d8d7b26c-bd46-4002-970c-edfa07d08d6b.jpg" alt="Amigurumi Unicornio" />
+          <h3>Manteles para mesas personalizado</h3>
+          <p>$40000</p>
+          <button class="add-to-cart" data-id="2" data-nombre="Unicornio mágico" data-precio="40000">Agregar</button>
         </div>
         <div class="producto">
-          <img src="https://th.bing.com/th/id/OIP.0FoaGuaso90H1SryZhHL8AHaHa?w=171&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="Amigurumi Abeja" />
-          <h3>Abejita feliz</h3>
-          <p>$30.000</p>
+          <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\dfe441e5-64e9-4ceb-94b6-e0050fb00b20.jpg" alt="Amigurumi Abeja" />
+          <h3>Flores para regalo</h3>
+          <p>$30000</p>
+          <button class="add-to-cart" data-id="3" data-nombre="Abejita feliz" data-precio="30000">Agregar</button>
         </div>
       </div>
-      <h2>Mas productos</h2>
-      <div class="producto">
-          <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\0c413419-9013-4d64-9690-80667462eaf8.jpg"
-           />
-           <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\dfe441e5-64e9-4ceb-94b6-e0050fb00b20.jpg"
-           />
-        </div>
-
     </section>
 
+    <!-- Nosotros -->
     <section id="nosotros" class="seccion oculto">
       <h2>Sobre Nosotros</h2>
-      <p>Somos un emprendimiento dedicado a crear piezas únicas de amigurumi, con buena calidad y diseño.</p>
+      <p>Somos un emprendimiento dedicado a crear piezas únicas de amigurumi, poniendo amor en cada puntada.</p>
+    </section>
+
+    <!-- Carrito -->
+    <section id="carrito" class="seccion oculto">
+      <h2>Carrito de Compras</h2>
+      <div id="cart-items"></div>
+      <h3>Total: $<span id="cart-total">0</span></h3>
     </section>
   </main>
 
-  <!-- Pie de página -->
   <footer>
     <p>&copy; 2025 Ensueño Click</p>
   </footer>
