--- a/Ensueño click/index.html
+++ b/Ensueño click/index.html
@@ -38,17 +38,17 @@
     <h2>Productos Destacados</h2>
     <div class="grid">
       <div class="producto">
-        <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\d8d7b26c-bd46-4002-970c-edfa07d08d6b.jpg" alt="Manteles para decoracion">
+        <img src="img/d8d7b26c-bd46-4002-970c-edfa07d08d6b.jpg" alt="Manteles para decoracion">
         <h3>Manteles para decoracion</h3>
         <p>$35.000 o puede variar</p>
       </div>
       <div class="producto">
-        <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\7d1d9e84-e7f0-4edc-943e-17c482e2a377.jpg" alt="Pesebres navideños">
+        <img src="img/9ea2289f-fc82-4de6-9228-0eab2b690b47.jpg" alt="Pesebres navideños">
         <h3>Pesebres navideños</h3>
         <p>$80.000</p>
       </div>
       <div class="producto">
-        <img src="c:\Users\castr\OneDrive\Documentos\Fotos pagina web\dfe441e5-64e9-4ceb-94b6-e0050fb00b20.jpg" alt="Flores para decoracion">
+        <img src="img/dfe441e5-64e9-4ceb-94b6-e0050fb00b20.jpg" alt="Flores para decoracion">
         <h3>Flores para decoracion</h3>
         <p>$30.000 o puede variar</p>
       </div>
