--- a/Ensueño click/index.html
+++ b/Ensueño click/index.html
@@ -5,56 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ensueño Click - Inicio</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <div class="logo">🧶 Ensueño Click</div>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Inicio</a></li>
-        <li><a href="catalogo.html">Catálogo</a></li>
-        <li><a href="nosotros.html">Sobre Nosotros</a></li>
-        <li><a href="carrito.html">Carrito 🛒 (<span id="cart-count">0</span>)</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <div class="logo">Ensueño Click</div>
+  <nav>
+    <ul>  
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="catalogo.html">Catálogo</a></li>
+      <li><a href="nosotros.html">Sobre Nosotros</a></li>
+      <li><a href="politica.html">Política de Datos</a></li>
+    </ul>
+  </nav>
+  <div class="carrito-icono" onclick="toggleCarrito()">🛒 <span id="contador-carrito">0</span></div>
+</header>
+
+<!-- Panel del carrito (puedes copiarlo en todas las páginas para que siempre se vea igual) -->
+<div id="carrito-panel" class="carrito-panel">
+  <h2>Tu Carrito</h2>
+  <ul id="lista-carrito"></ul>
+  <p id="total">Total: $0</p>
+  <button onclick="vaciarCarrito()">Vaciar carrito</button>
+  <button onclick="finalizarCompra()">Finalizar compra</button>
+</div>
+
+
+<script src="carrito.js"></script>
+
 
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-text">
       <h1>Bienvenido a <span>Ensueño Click</span></h1>
-      <p>Amigurumis únicos, hechos a mano con mucho amor y dedicación.  
+      <p>Amigurumis únicos, hechos a mano con amor y dedicación.  
       El detalle perfecto para regalar o coleccionar. 💜</p>
       <a href="catalogo.html" class="btn">Explorar Catálogo</a>
     </div>
     <div class="hero-img">
-      <img src="img/amigurumi-banner.png" alt="Amigurumi principal">
-    </div>
-  </section>
-
-  <!-- Sección de destacados -->
-  <section class="destacados">
-    <h2>Productos Destacados</h2>
-    <div class="grid">
-      <div class="producto">
-        <img src="img/d8d7b26c-bd46-4002-970c-edfa07d08d6b.jpg" alt="Manteles para decoracion">
-        <h3>Manteles para decoracion</h3>
-        <p>$35.000 o puede variar</p>
-      </div>
-      <div class="producto">
-        <img src="img/9ea2289f-fc82-4de6-9228-0eab2b690b47.jpg" alt="Pesebres navideños">
-        <h3>Pesebres navideños</h3>
-        <p>$80.000</p>
-      </div>
-      <div class="producto">
-        <img src="img/dfe441e5-64e9-4ceb-94b6-e0050fb00b20.jpg" alt="Flores para decoracion">
-        <h3>Flores para decoracion</h3>
-        <p>$30.000 o puede variar</p>
-      </div>
-    </div>
-    <div class="center">
-      <a href="catalogo.html" class="btn">Ver más productos</a>
+      <img src="img/491bfa63-b571-4f88-9d67-c11071fda68c.jpg" alt="Amigurumi principal">
     </div>
   </section>
 
@@ -63,9 +56,8 @@
     <p>&copy; 2025 Ensueño Click</p>
     <p><a href="politica.html">Política de Tratamiento de Datos</a></p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
+
 
 
