--- a/Ensueño click/catalogo.html
+++ b/Ensueño click/catalogo.html
@@ -41,42 +41,42 @@
         <div class="producto">
           <img src="img/0c413419-9013-4d64-9690-80667462eaf8.jpg" alt="Muñecos personalizados">
           <h3>Muñecos personalizados</h3>
-          <p>$45.000</p>
+          <p>$45.000 o puede variar</p>
           <button onclick="agregarAlCarrito('Muñecos personalizados', 45000)">Añadir al carrito</button>
         </div>
 
         <div class="producto">
           <img src="img/2c02df68-0b80-42d8-99ba-fa2ead0e8b94.jpg" alt="Messi amigurumi">
           <h3>Messi amigurumi</h3>
-          <p>$90.000</p>
+          <p>$80.000</p>
           <button onclick="agregarAlCarrito('Messi amigurumi', 90000)">Añadir al carrito</button>
         </div>
 
         <div class="producto">
           <img src="img/7d1d9e84-e7f0-4edc-943e-17c482e2a377.jpg" alt="Pesebre navideño">
           <h3>Pesebre navideño</h3>
-          <p>$85.000</p>
+          <p>$95.000</p>
           <button onclick="agregarAlCarrito('Pesebre navideño', 85000)">Añadir al carrito</button>
         </div>
 
         <div class="producto">
           <img src="img/9ea2289f-fc82-4de6-9228-0eab2b690b47.jpg" alt="Muñecos navideños">
           <h3>Muñecos navideños</h3>
-          <p>$50.000</p>
+          <p>$50.000 o puede variar</p>
           <button onclick="agregarAlCarrito('Muñecos navideños', 50000)">Añadir al carrito</button>
         </div>
 
         <div class="producto">
           <img src="img/bf8ed128-4e07-49f0-bf8f-31658560c708.jpg" alt="Frailejon">
           <h3>Frailejon</h3>
-          <p>$55.000</p>
+          <p>$50.000</p>
           <button onclick="agregarAlCarrito('Frailejon', 55000)">Añadir al carrito</button>
         </div>
 
         <div class="producto">
           <img src="img/d8d7b26c-bd46-4002-970c-edfa07d08d6b.jpg" alt="Manteles para decoracion">
           <h3>Manteles para decoracion</h3>
-          <p>$60.000</p>
+          <p>$60.000 o puede variar</p>
           <button onclick="agregarAlCarrito('Manteles para decoracion', 60000)">Añadir al carrito</button>
         </div>
 
